@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999985';
+our $VERSION='0.99999986';
 
 
 use 5.005;
